Fix navbar dropdown not closing on mobile

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ section h5.question {
 }
 
 section h2.answer {
-  font-size: 28px;
+  font-size: 30px;
   font-family: "Montserrat-Thin";
   font-weight: 200;
   margin-bottom: 0;
